sampler/chain/projects/mockito/selected.txt
/home/nima/Developer/AutoFixer/Evaluation/Projects/mockito/src/main/java/org/mockito/internal/stubbing/BaseStubbing.java:59: error: [NullAway] (INDEX= 104) (Covered) passing @Nullable parameter '(Throwable) null' where @NonNull is required
            return thenThrow((Throwable) null);
                             ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/mockito/src/main/java/org/mockito/internal/progress/MockingProgressImpl.java:86: error: [NullAway] (INDEX= 59) (Covered) assigning @Nullable expression to @NonNull field
        ongoingStubbing = null;
                        ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/mockito/src/main/java/org/mockito/internal/stubbing/answers/DoesNothing.java:29: error: [NullAway] (INDEX= 108) (Covered) returning @Nullable expression from method with @NonNull return type
        return null;
        ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/mockito/src/main/java/org/mockito/internal/verification/SingleRegisteredInvocation.java:22: error: [NullAway] (INDEX= 164) (Covered) assigning @Nullable expression to @NonNull field
        invocation = null;
                   ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/mockito/src/main/java/org/mockito/internal/creation/MockSettingsImpl.java:45: error: [NullAway] (INDEX= 170) (Covered) @NonNull field constructorArgs not initialized
    private Object[] constructorArgs;
                     ^

	(see http://t.uber.com/nullaway )
